--- a/index.html
+++ b/index.html
@@ -461,6 +461,73 @@
                 </div>
         </section>
 
+        <section class="md-pick">
+            <div class="md-pick-left">
+                <a class="img-area" href="#">
+                    <p class="sub-title">올해 갓 채엽한 햇차의 매력</p>
+                    <p class="title">이맘때에만 볼 수 있는<br>골든픽 (GOLDEN PICK)</p>
+                    <p class="move">MD'S PICK 더 보기 <img src="./src/img/md-pick/arr_42x12.png" alt=""></p>
+                </a>
+            </div>
+            <div class="md-pick-right">
+                <p> <span class="point">Vol 9</span> 2020.5 MD PICK</p>
+                <ul class="md-pick-list">
+                    <li>
+                        <img src="./src/img/md-pick/md-pick01.png" alt="">
+                        <p class="item-title">세작 80g (햇차, 2020)</p>
+                        <p class="item-price">40,000원</p>
+                    </li>
+                    <li>
+                        <img src="./src/img/md-pick/md-pick02.png" alt="">
+                        <p class="item-title">세작 10입 (햇차, 2020)</p>
+                        <p class="item-price">20,000원</p>
+                    </li>
+                    <li>
+                        <img src="./src/img/md-pick/md-pick03.png" alt="">
+                        <p class="item-title">세작 피라미드 20입 (햇차, 2020)</p>
+                        <p class="item-price">25,000원</p>
+                    </li>
+                    <li>
+                        <img src="./src/img/md-pick/md-pick04.png" alt="">
+                        <p class="item-title">세작 3입 (햇차, 2020)</p>
+                        <p class="item-price">4,800원</p>
+                    </li>
+                </ul>
+                <div class="arrow-area">
+                    <div class="a11y-hidden prev">prev</div>
+                    <div class="a11y-hidden next">next</div>
+                </div>
+                <div class="progressBar">
+                    <div class="progress"> </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="tea-ware-shop">
+            <div class="tea-ware-shop-left">
+                <h2>Tea ware shop</h2>
+                <p class="text">다채로운 오설록의 차를 즐길 수 있는 다양한 Tea ware를 만나보세요.</p>
+                <p class="move">전체보기 <img src="./src/img/md-pick/arr_42x12.png" alt=""></p>
+            </div>
+            <div class="tea-ware-shop-right">
+                <div class="group1">
+                    <div class="left">
+                        <div class="img-box"><a href="#"><span class="a11y-hidden">kinto</span></a></div>
+                        <div class="img-box"><a href="#"><span class="a11y-hidden">seoul bund</span> </a></div>
+                    </div>
+                    <div class="right">
+                        <div class="img-box"><a href="#"><span class="a11y-hidden">torim</span></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="arrow-area">
+                <div class="a11y-hidden prev">prev</div>
+                <div class="a11y-hidden next">next</div>
+            </div>
+            <div class="progressBar">
+                <div class="progress"> </div>
+            </div>
+        </section>
     </main>
 </body>
 
