today-price 영역 작업

--- a/index.html
+++ b/index.html
@@ -528,6 +528,29 @@
                 <div class="progress"> </div>
             </div>
         </section>
+
+        <section class="today-price">
+            <h2>오늘만 이 가격</h2>
+            <p>오늘 하루만 이 가격으로 구매할 수 있는 상품을 지금 바로 만나보세요.</p>
+            <div class="today-price-content">
+                <div class="top">
+                    <p class="timer">11:34:12</p>
+                    <p class="item-title">달꽃이바라보는바당 10입(피라미드)</p>
+                    <div class="item-price">
+                        <p class="sale">30% 할인</p>
+                        <p class="price">15,000원</p>
+                        <p class="t-price">10,500원</p>
+                    </div>
+                    <div class="tommorow-item-area">
+                        <p class="text">내일은 이제품이 올라와요</p>
+                        <img src="./src/img/today-price/tommorrow-item.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom">
+                    <a class="btn-buy" href="#">바로구매</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
