custom-recommendation 작업

--- a/index.html
+++ b/index.html
@@ -551,6 +551,12 @@
                 </div>
             </div>
         </section>
+
+        <section class="custom-recommendation">
+            <h2 class="a11y-hidden">맞춤추천</h2>
+            <img src="./src/img/recommend/recommend01.jpg" alt="맞춤추천">
+            <img src="./src/img/recommend/recommend02.jpg" alt="차 어렵지 않아요">
+        </section>
     </main>
 </body>
 
