--- a/index.html
+++ b/index.html
@@ -557,6 +557,43 @@
             <img src="./src/img/recommend/recommend01.jpg" alt="맞춤추천">
             <img src="./src/img/recommend/recommend02.jpg" alt="차 어렵지 않아요">
         </section>
+
+        <section class="saleUp">
+            <h2>뭉치면 할인 <strong>UP</strong></h2>
+            <p>모이면 모일수록 커지는 할인쿠폰 혜택을 만나보세요 !</p>
+            <div class="image-area">
+                <div class="left">
+                    <div class="text-area">
+                        <div class="left">
+                            <p class="item-title">귤꽃향을 품은 우잣담 10입(피라미드)</p>
+                            <p class="date">신청기간 05.11 ~ 05.24</p>
+                        </div>
+                        <div class="right">
+                            <p class="price">15,000원</span></p>
+                            <p class="s-price">목표할인가 <span>12,000원</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="cupon-area">
+                        <p class="cupon-text"><span>20%</span><br>쿠폰 지급예정</p>
+                        <p><span class="red">11</span>개만 더 모이면 <span class="green">20%</span> 쿠폰이 지급됩니다.<br>
+                            주변 사람들에게 소문내고, 최대 할인율에 도전하세요!</p>
+                    </div>
+                    <div class="percent-area">
+                        <div class="percent"></div>
+                        <div class="number">
+                            <span>100</span>
+                            <span></span>
+                            <span>300</span>
+                            <span></span>
+                            <span>500</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
