shop 영역 작업한 부분까지 commit

--- a/index.html
+++ b/index.html
@@ -594,6 +594,178 @@
             </div>
         </section>
 
+        <section class="shop">
+            <h2>Shop</h2>
+            <p>오설록이 준비한 티 라인에서 당신이 찾는 티 스타일을 찾아보세요.</p>
+            <div class="slide-area">
+                <div class="top">
+                    <ul>
+                        <li><img src="./src/img/shop/02.jpg" alt=""></li>
+                        <li><img src="./src/img/shop/03.jpg" alt=""></li>
+                        <li><img src="./src/img/shop/01.jpg" alt=""></li>
+                    </ul>
+                </div>
+                <div class="bottom">
+                    <ul class="shop-list">
+                        <li>명차</li>
+                        <li>녹차/발효차/홍차</li>
+                        <li>허브티(무카페인)</li>
+                        <li>블렌디드티</li>
+                        <li>웰니스티</li>
+                        <li>파우더</li>
+                        <li>세트</li>
+                        <li>오피스몰</li>
+                        <li>베이커리</li>
+                        <li>기프트몰</li>
+                        <li>라이프스타일몰</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="item-list">
+                <div class="review">
+                    <h3>리뷰많은순</h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <p class="item-title">세작 20입(피라미드)</p>
+                                <p class="item-price">25,000원</p>
+                                <div>
+                                    <span class="heart">13</span>
+                                    <span class="review">274</span>
+                                </div>
+                            </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p class="item-title">찬물녹차 20입(아이스티))</p>
+                            <p class="item-price">7,500원</p>
+                            <div>
+                                <span class="heart">10</span>
+                                <span class="review">261</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p class="item-title">세작 40g(잎차)</p>
+                            <p class="item-price">17,000원</p>
+                            <div>
+                                <span class="heart">16</span>
+                                <span class="review">245</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p class="item-title">세작 80g(잎차)</p>
+                            <p class="item-price">40,000원</p>
+                            <div>
+                                <span class="heart">5</span>
+                                <span class="review">176</span>
+                            </div>
+                        </a>
+                    </li>
+                    </ul>
+                </div>
+                <div class="bestseller">
+                    <h3>베스트셀러</h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <p class="item-title">찬물녹차 20입(아이스티))</p>
+                                <p class="item-price">7,500원</p>
+                                <div>
+                                    <span class="heart">10</span>
+                                    <span class="review">261</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="item-title">세작 40g(잎차)</p>
+                                <p class="item-price">17,000원</p>
+                                <div>
+                                    <span class="heart">16</span>
+                                    <span class="review">245</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="item-title">덖음차 50g(햇차, 2020)</p>
+                                <p class="item-price">15,000원</p>
+                                <div>
+                                    <span class="heart">4</span>
+                                    <span class="review">4</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="item-title">세작 피라미드 20입(햇차, 2020))</p>
+                                <p class="item-price">25,000원</p>
+                                <div>
+                                    <span class="heart">11</span>
+                                    <span class="review">2</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="sale">
+                    <h3>할인상품</h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <p class="item-title">제주 한라발효차 20입(티백)</p>
+                                <p class="item-price">6,800원</p>
+                                <div>
+                                    <span class="heart">5</span>
+                                    <span class="review">26</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="item-title">제주순수녹차 20입(티백)</p>
+                                <p class="item-price">6,800원</p>
+                                <div>
+                                    <span class="heart">10</span>
+                                    <span class="review">105</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <a class="btn-all-item-view" href="#">전체 상품 보기 <img src="./src/img/md-pick/arr_42x12.png" alt=""></a>
+        </section>
+
+        <!-- <section class="sns">
+            <h3>Follow Us <span>#OSULLOC</span></h3>
+            <ul>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </section> -->
+
+        <!-- <section class="notice"></section> -->
     </main>
 </body>
 
