sns, notice 영역 작업

--- a/index.html
+++ b/index.html
@@ -751,32 +751,109 @@
       <a class="btn-all-item-view" href="#" role="button">전체 상품 보기</a>
     </section>
 
-    <!-- <section class="sns">
-            <h3>Follow Us <span>#OSULLOC</span></h3>
-            <ul>
-                <li>
-                    <a href="#"></a>
-                </li>
-                <li>
-                    <a href="#"></a>
-                </li>
-                <li>
-                    <a href="#"></a>
-                </li>
-                <li>
-                    <a href="#"></a>
-                </li>
-                <li>
-                    <a href="#"></a>
-                </li>
-                <li>
-                    <a href="#"></a>
-                </li>
-            </ul>
-        </section> -->
 
-    <!-- <section class="notice"></section> -->
+    <section class="sns">
+      <h3>Follow Us <span>#OSULLOC</span></h3>
+      <ul>
+        <li>
+          <a href="#"><img src="./src/img/sns/sns01.jpg" alt="제주 유기농 차 밭의 진한 녹차와 
+                부드러운 크림이 만난 ‘오설록 그린티 슈페너’
+                ⠀
+                달콤한 크림의 부드러운 첫 맛과 달콤쌉싸래한 제주 녹차의 
+                완벽한 만남 😍 
+                아인슈페너를 모티브로 탄생한 ‘오설록 티슈페너’를 
+                오설록 매장에서 만나보세요💚
+                ⠀
+                #오설록 #osulloc #그린티슈페너 #오설록그린티슈페너 
+                #티슈페너 #아인슈페너 #티아인슈페너"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./src/img/sns/sns02.jpg" alt="오설록 제주 차 밭을 키우는 
+                다섯 가지 자연의 선물 - 빛, 안개, 물, 바람, 흙
+                ⠀
+                화산섬이라는 특수한 자연 조건을 가진 제주의 빛, 안개, 물, 
+                바람, 흙은 생육이 까다로운 차나무를 키우고 찻잎을 틔우기에 탁월한 요소들이지만, 사람의 정성과 진심이 더해졌을 때에야 완벽한 하모니를 이루어냅니다.
+                ⠀
+                Nature's five gifts to Osulloc Jeju tea farm - sunlight, mist, water, breeze and soil.
+                ⠀
+                Volcanic Island, thanks to such a special natural setting, helps growing quality tea plants. However, 
+                it won't be complete until a sincere devotion come into play and create perfect harmony.
+                ⠀
+                #오설록 #osulloc #오설록차밭 #osullocteafarm #jeju #제주 #차밭 #teafarm"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./src/img/sns/sns03.jpg" alt="토림도예 개완과 함께
+                티 라이프 스타일을 완성해보세요🍵
+                ⠀
+                한옥 ‘처마’의 곡선에서 모티브를 얻어 제작한 토림도예의 
+                다기는 부드러운 곡선을 가지고 있습니다.
+                ⠀
+                Fulfill your tea life with Torim Ceramics🍵
+                The soft curvature of the ceramics was inspired by the eaves from traditional Korean house architecture.
+                ⠀
+                #오설록 #Osulloc #torimceramics #토림도예개완 #osulloclife #tealife"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./src/img/sns/sns04.jpg" alt="이맘때만 만날 수 있는 황금빛 찻잎, 🌱
+                #20년햇차 오설록에서 만나보세요
+                👉🏻제품보기 클릭!
+                ⠀
+                구매고객에게 골든티켓 증정하는 푸짐한 혜택까지!💚
+                프로필링크에서 자세한 이벤트 내용 확인해주세요:)
+                ⠀
+                #오설록 #osulloc #2020년햇차 #2020리미티드티 #GOLDENPICK #GOLDENTEA"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./src/img/sns/sns05.jpg" alt="2020년 오설록 햇차 출시🌱
+                👉🏻인스타그램홈에서 이벤트 상세 내용 확인해주세요:)
+                ⠀
+                햇차 출시 기념! [GOLDEN PICK 리그램 #이벤트]
+                ⠀
+                댓글에 @친구에게 ‘햇차 출시’ 공유하고 본 게시물을 리그램해주시면 오설록 마스터즈티 라인중 ‘20년 햇차 우전’을 10분께 드립니다🎁
+                ⠀
+                ✔️참여방법
+                1.osulloc_official 인스타그램 팔로우
+                2.댓글에 친구 소환
+                3.본 게시물과 함께 4개 해시태그 포함한 리그램
+                #오설록 #2020년햇차 #goldenpick #오설록우전⠀
+                ⠀
+                ✔️기간: 20년 4월 29일(수) ~ 5월 17일(일)
+                ⠀
+                ✔️경품: 20년 햇차 우전 60g(잎차)&10잎(피라미드)
+                ⠀
+                *이벤트 종료 후 2주 이내 본 게시물 댓글에 발표 예정
+                *계정 공개는 필수
+                *오설록 인스타그램 페이지&본 게시물 좋아요는 센스!"></a>
+        </li>
+        <li>
+          <a href="#"><img src="./src/img/sns/sns06.jpg" alt="달콤한 카라멜 향미가 나는 루이보스티 
+                한잔과 함께 편안한 주말 시작하세요 :)
+                -
+                Start your weekend with a cup of rooibos tea has a sweet caramel flavor🍯
+                -
+                #오설록 #osulloc #osulloclife #루이보스티 #루이보스카라멜베리 #루이보스퓨어 #rooibostea #redtea"></a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="notice">
+      <div class="wrap">
+        <h2>공지사항</h2>
+        <ul>
+          <li><a href="#">[공지] L.POINT 서비스 점검(일시중단) 안내_ 3/16(월) 00:00~08:10</a></li>
+          <li><a href="#">[공지] 구매사은품 지류쿠폰 지급 종료 및 혜택 변경 예정 안내</a></li>
+        </ul>
+        <a class="view-more" href="#">+더보기</a>
+        <div class="sns-icon">
+          <a href="https://www.facebook.com/Jeju.OSULLOC" class="facebook"><img src="./src/img/notice/sns_f.png"
+              alt=""></a>
+          <a href="https://www.instagram.com/osulloc_official/" class="instagram"><img src="./src/img/notice/sns_i.png"
+              alt=""></a>
+        </div>
+      </div>
+    </section>
   </main>
+
 </body>
 
 </html>
