--- a/index.html
+++ b/index.html
@@ -854,6 +854,60 @@
     </section>
   </main>
 
+  <footer>
+    <div class="top">
+      <div class="wrap">
+        <div class="tel">
+          <p>고객상담센터 · 주문/배송문의</p>
+          <p>080-805-5555</p>
+          <p>평일 09:30 - 17:00 (점심 11:30 - 13:00)</p>
+        </div>
+        <div class="tel2">
+          <p>특판, 대량구매 문의</p>
+          <p>help@osulloc.com</p>
+          <p>010-2515-1979 / 카톡ID : osullocmall</p>
+          <p>평일 09:30 - 17:00 (점심 11:30 - 13:00)</p>
+        </div>
+        <div class="icon">
+          <a href=""><img src="./src/img/footer/f1.png" alt="">매장안내</a>
+          <a href=""><img src="./src/img/footer/f2.png" alt="">멤버십혜택</a>
+          <a href=""><img src="./src/img/footer/f3.png" alt="">FAQ</a>
+          <a href=""><img src="./src/img/footer/f4.png" alt="">1:1문의</a>
+        </div>
+      </div>
+    </div>
+    <div class="bottom">
+      <div class="wrap">
+        <img src="./src/img/footer/f_logo.png" alt="">
+        <ul>
+          <li><a href="">회사소개</a></li>
+          <li><a href="">서비스 이용약관</a></li>
+          <li><a href="">개인정보 처리방침</a></li>
+          <li><a href="">영상정보 처리방침</a></li>
+          <li><a href="">뷰티포인트</a></li>
+          <li><a href="">임직원할인</a></li>
+          <li><a href="">사이트맵</a></li>
+          <li><a href="">전자공고</a></li>
+        </ul>
+        <p>㈜ 오설록</p>
+        <span>대표이사:서혁제</span>
+        <address>주소:서울특별시 용산구 한강대로 100, 14층(한강로2가)</address>
+        <span>사업자등록번호: 390-87-01499</span>
+        <a>사업자 정보확인 ></a>
+        <span>통신판매업신고번호:2019-서울용산-1173호 호스팅제공자: ㈜오설록</span>
+        <p>
+          (주)오설록은 오설록 브랜드를 제외한 입점 브랜드에 대해서는 통신판매중개자 이며 통신판매의 당사자가 아닙니다.<br>
+          따라서 입점판매자가 등록한 상품정보 및 거래에 대해 책임을 지지 않습니다.
+        </p>
+        <dl class="escrow">
+          <dt>(주)이니시스 구매안전서비스</dt>
+          <dd><img src="./src/img/footer/escrow_43x43_gray.png" alt="escrow 인증마크"></dd>
+          <dd>고객님의 안전거래를 위해 현금 거래에 대해 이니페이 에스크로서비스를 이용하실 수 있습니다.</dd>
+        </dl>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
