--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/font.css">
   <link rel="stylesheet" href="./src/css/index.css">
+  <link rel="shortcut icon" href="/src/img/favicons.png">
   <script src="./src/js/jquery-1.10.2.min.js"></script>
   <script src="./src/js/index.js"></script>
 </head>
@@ -110,7 +111,7 @@
   <div class="visual">
     <div class="visual-wrap">
       <div class="img-slide">
-        <a href="#" class="slide one">
+        <a href="#" class="slide one active">
           <p class="title">2020 GOLDEN PICK</p>
           <p class="sub-title">이맘때에만 만날 수 있는 황금빛 찻잎</p>
           <time>2020년 4월 29일 ~ 2020년 5월 31일</time>
@@ -120,7 +121,7 @@
           <p class="sub-title">행사의 달, 오설록으로 뜻깊은 마음을 전하세요.</p>
           <time>2020년 5월 01일 ~ 2020년 5월 31일</time>
         </a>
-        <a href="#" class="slide three">
+        <a href="#" class="slide three ">
           <p class="title">다다일상, 집에서 즐기는 싱그러운 제주여행</p>
           <p class="sub-title">싱그러운 5월의 제주를 집에서도 즐겨보세요!</p>
           <time>2020년 4월 29일 ~ 2020년 5월 31일</time>
@@ -134,7 +135,7 @@
 
       <div class="slide-select-area">
         <ul>
-          <li>
+          <li class="active">
             <a href="#">한정판 골든 티켓 증정</a>
           </li>
           <li>
@@ -147,7 +148,7 @@
             <a href="#">텅장을 위한 티타임</a>
           </li>
         </ul>
-        <button class="btn-slide-stop"><span class="a11y-hidden">슬라이드 일시정지</span></button>
+        <button class="btn-slide-state stop"><span class="a11y-hidden">슬라이드 일시정지</span></button>
       </div>
     </div>
   </div>
