이미지 정리

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/font.css">
   <link rel="stylesheet" href="./src/css/index.css">
-  <link rel="shortcut icon" href="/src/img/favicons.png">
+  <link rel="shortcut icon" href="/src/img/header/favicons.png">
   <script src="./src/js/jquery-1.10.2.min.js"></script>
   <script src="./src/js/index.js"></script>
 </head>
@@ -17,7 +17,7 @@
   <header>
     <div class="logo-area ">
       <h1 class="logo">
-        <a href="#"><img src="./src/img/logo_m.png" alt="오설록 로고" /></a>
+        <a href="#"><img src="./src/img/header/logo_m.png" alt="오설록 로고" /></a>
       </h1>
       <nav class="tnb">
         <ul class="util">
@@ -50,7 +50,7 @@
             <div class="ad-area">
               <p class="title">오늘만 이가격</p>
               <p class="text">30% 할인된 가격에 구매할 기회! <br>놓치지 마세요~</p>
-              <img src="./src/img/sub-menu-img.png" width=150px; alt="이벤트 상품">
+              <img src="./src/img/header/sub-menu-img.png" width=150px; alt="이벤트 상품">
             </div>
             <div class="sub-menu-area">
               <ul>
