--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
     <section class="weekly-best">
       <div class="wrap">
         <h2 class="section-title">Weekly Best</h2>
-        <div class="review active">
-          <h3>
-            <a href="#" role="button">리뷰순</a>
+        <div class="review">
+          <h3 class="review-tab">
+            <a role="button">리뷰순</a>
           </h3>
-          <ol class="review-rank-container">
+          <ol class="rank-container review active">
             <li>
               <div class="image-wrap">
                 <a href="#">
@@ -365,144 +365,110 @@
               </div>
             </li>
           </ol>
-          <div class="arrow-area">
+          <div class="arrow-area reivew active">
             <div class="a11y-hidden prev">prev</div>
             <div class="a11y-hidden next">next</div>
           </div>
-          <div class="progressBar">
+          <div class="progressBar reivew active">
             <div class="progress"> </div>
           </div>
         </div>
-        <div class="sales">
-          <h3>
-            <a href="#" role="button">판매순</a>
+        <div class="sale">
+          <h3 class="active sale-tab">
+            <a role="button">판매순</a>
           </h3>
-          <!-- <ol class="sales-rank-container">
+          <ol class="rank-container sale">
             <li>
               <div class="image-wrap">
                 <a href="#">
-                  <img src="./src/img/200_20180904143404408UV.png" alt="">
+                  <img src="./src/img/review/sale01.png" alt="">
                 </a>
               </div>
-              <div class="rate">★★★★★</div>
               <p class="item-title"><a href="#">프리미엄 티 컬렉션</a></p>
-              <div class="sales-content">
-                <p class="sales-text">선물용이라 받자마자 급하게 드리고 오느라 사진은 못찍었지만 향도 다르고</p>
-                <span class="id">ism*****</span>
-                <span class="date">2020.05.17</span>
-              </div>
+              <p class="item-price">25,000원</p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/200_20190919205017968RP.png" alt=""></a>
+                <a href="#">
+                  <img src="./src/img/review/sale02.png" alt="">
               </div>
-              <div class="rate">★★★★★</div>
-              <p class="item-title"><a href="#">그린티 웨하스 100g</a></p>
-              <div class="sales-content">
-                <p class="sales-text">맛있게 먹었어요. 택배 오면서 부서지지 말라고 포장도 꼼꼼해서 마음에 들었어요.</p>
-                <span class="id">sjb*****</span>
-                <span class="date">2020.05.18</span>
-              </div>
+              <p class="item-title"><a href="#">녹차밀크스프레드 200 g</a></p>
+              <p class="item-price">8,500원</p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/304_20200517235924213MF.png" alt=""></a>
+                <a href="#">
+                  <img src="./src/img/review/sale03.png" alt="">
+                </a>
               </div>
-              <div class="rate">★★★★☆</div>
               <p class="item-title"><a href="#">그린티 롤케이크(화아트)</a></p>
-              <div class="review-content">
-                <p class="review-text">오설록 롤케이크는 프리미엄 간식입니다. 차나 커피랑 함께하면 정말 맛있습니다.</p>
-                <span class="id">moo*****</span>
-                <span class="date">2020.05.12</span>
-              </div>
+              <p class="item-price">25,000원</p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/200_20180510132548266RY.png" alt=""></a>
+                <a href="#">
+                  <img src="./src/img/review/sale04.png" alt="">
+                </a>
               </div>
-              <div class="rate">★★★★★</div>
               <p class="item-title"><a href="#">러블리티박스</a></p>
-              <div class="review-content">
-                <p class="review-text">아이 과외선생님 선물로 딱 좋아요
-                  <div class=""></div>
-                </p>
-                <span class="id">jin*****</span>
-                <span class="date">2020.05.18</span>
-              </div>
+              <p class="item-price"><a href="#">25,000원</a></p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/200_20181231210556386LG.png" alt=""></a>
+                <a href="#">
+                  <img src="./src/img/review/sale05.png" alt="">
+                </a>
               </div>
-              <div class="rate">★★★★★</div>
-              <p class="item-title"><a href="#">그린티 랑드샤 10입</a></p>
-              <div class="review-content">
-                <p class="review-text">가격이 조금 아쉽지만 그래도 넘 맛있게 먹었어요~~</p>
-                <span class="id">sjb*****</span>
-                <span class="date">2020.05.18</span>
-              </div>
+              <p class="item-title"><a href="#">웨딩그린티 3입(피라미드)</a></p>
+              <p class="item-price"><a href="#">4,500 원</a></p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/200_20170418183503104KB.png" alt=""></a>
+                <a href="#">
+                  <img src="./src/img/review/sale06.png" alt="">
+                </a>
               </div>
-              <div class="rate">★★★★★</div>
-              <p class="item-title"><a href="#">마스터블렌드</a></p>
-              <div class="review-content">
-                <p class="review-text">좋은 제품, 좋은 가격으로 지인들 선물용으로 3개세트 잘 구매했습니다. 앞으로도</p>
-                <span class="id">bus*****</span>
-                <span class="date">2020.05.16 </span>
-              </div>
+              <p class="item-title"><a href="#">제주순수녹차 20입(티백)</a></p>
+              <p class="item-price"><a href="#">6,800원</a></p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/304_20191007135642767XI.png" alt=""></a>
+                <a href="#">
+                  <img src="./src/img/review/sale07.png" alt="">
+                </a>
               </div>
-              <div class="rate">★★★★★</div>
               <p class="item-title"><a href="#">세작 40g(잎차)</a></p>
-              <div class="review-content">
-                <p class="review-text">차를 즐기는 조카에게 선물했어요 깔끔하게 즐길거에요</p>
-                <span class="id">nem*****</span>
-                <span class="date">2020.05.10</span>
-              </div>
+              <p class="item-price"><a href="#">17,000 원</a></p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/304_20200424132957799SW.png" alt=""></a>
+                <a href="#"><img src="./src/img/review/sale08.png" alt=""></a>
               </div>
-              <div class="rate">★★★★★</div>
-              <p class="item-title"><a href="#">덖음차 50g (햇차, 2020)</a></p>
-              <div class="review-content">
-                <p class="review-text">깔끔하고 개운합니다.햇차라 더 좋으네요.</p>
-                <span class="id">hjh*****</span>
-                <span class="date">2020.05.16</span>
-              </div>
+              <p class="item-title"><a href="#">세작 피라미드 20입 (햇차, 2020)</a></p>
+              <p class="item-price"><a href="#">25,000 원</a></p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/304_20200517235950164BV.png" alt=""></a>
+                <a href="#"><img src="./src/img/review/sale09.png" alt=""></a>
               </div>
-              <div class="rate">★★★★☆</div>
-              <p class="item-title"><a href="#">제주 녹차 크레이프 케이크</a></p>
-              <div class="review-content">
-                <p class="review-text">이 제품 아주 중독성있네요. 녹차맛이 좋아 자꾸자꾸 먹게되네요. 기념일도 아닌데</p>
-                <span class="id">moo*****</span>
-                <span class="date">2020.05.14</span>
-              </div>
+              <p class="item-title"><a href="#">제주유채&꿀티 20입(티백)</a></p>
+              <p class="item-price"><a href="#">6,800 원</a></p>
             </li>
             <li>
               <div class="image-wrap">
-                <a href="#"><img src="./src/img/200_20180906153227885BX.png" alt=""></a>
+                <a href="#"><img src="./src/img/review/sale10.png" alt=""></a>
               </div>
-              <div class="rate">★★★★☆</div>
-              <p class="item-title"><a href="#">삼다꿀배티 20입(티백)</a></p>
-              <div class="review-content">
-                <p class="review-text">그냥 향긋함도 좋지만 달달한 느낌이 좋네요</p>
-                <span class="id">alf*****</span>
-                <span class="date">2020.05.16</span>
-              </div>
+              <p class="item-title"><a href="#">달빛걱기 20입 (피라미드))</a></p>
+              <p class="item-price"><a href="#">23,000 원</a></p>
             </li>
-          </ol> -->
+          </ol>
+          <div class="arrow-area sale">
+            <div class="a11y-hidden prev">prev</div>
+            <div class="a11y-hidden next">next</div>
+          </div>
+          <div class="progressBar sale">
+            <div class="progress"> </div>
+          </div>
         </div>
       </div>
     </section>
