--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <div class="logo-area ">
+    <div class="logo-area">
       <h1 class="logo">
         <a href="#"><img src="./src/img/header/logo_m.png" alt="오설록 로고" /></a>
       </h1>
@@ -50,7 +50,7 @@
             <div class="ad-area">
               <p class="title">오늘만 이가격</p>
               <p class="text">30% 할인된 가격에 구매할 기회! <br>놓치지 마세요~</p>
-              <img src="./src/img/header/sub-menu-img.png" width=150px; alt="이벤트 상품">
+              <img src="./src/img/header/sub-menu-img.png" width="150" alt="이벤트 상품">
             </div>
             <div class="sub-menu-area">
               <ul>
@@ -107,6 +107,7 @@
           </li>
         </ul>
       </nav>
+    </div>
   </header>
 
   <div class="visual">
@@ -115,22 +116,22 @@
         <a href="#" class="slide one active">
           <p class="title">2020 GOLDEN PICK</p>
           <p class="sub-title">이맘때에만 만날 수 있는 황금빛 찻잎</p>
-          <time>2020년 4월 29일 ~ 2020년 5월 31일</time>
+          <p class="time">2020년 4월 29일 ~ 2020년 5월 31일</p>
         </a>
         <a href="#" class="slide two">
           <p class="title">MAY Be Love, 5월 출석체크</p>
           <p class="sub-title">행사의 달, 오설록으로 뜻깊은 마음을 전하세요.</p>
-          <time>2020년 5월 01일 ~ 2020년 5월 31일</time>
+          <p class="time">2020년 5월 01일 ~ 2020년 5월 31일</p>
         </a>
         <a href="#" class="slide three ">
           <p class="title">다다일상, 집에서 즐기는 싱그러운 제주여행</p>
           <p class="sub-title">싱그러운 5월의 제주를 집에서도 즐겨보세요!</p>
-          <time>2020년 4월 29일 ~ 2020년 5월 31일</time>
+          <p class="time">2020년 4월 29일 ~ 2020년 5월 31일</p>
         </a>
         <a href="#" class="slide four">
           <p class="title">텅장에도 포기할 수 없는 티타임을 위해</p>
           <p class="sub-title">지출이 많은 5월엔 프리미엄 티백으로 티타임 어떠세요?</p>
-          <time>2020년 5월 18일 ~ 2020년 5월 31일</time>
+          <p class="time">2020년 5월 18일 ~ 2020년 5월 31일</p>
         </a>
       </div>
 
@@ -159,7 +160,7 @@
       <div class="wrap">
         <h2 class="section-title">Weekly Best</h2>
         <div class="review">
-          <h3 class="review-tab">
+          <h3 class="review-tab active">
             <a role="button">리뷰순</a>
           </h3>
           <ol class="rank-container review active">
@@ -201,6 +202,7 @@
                   <span class="id">sjb*****</span>
                   <span class="date">2020.05.18</span>
                 </div>
+              </div>
             </li>
             <li>
               <div class="image-wrap">
@@ -236,7 +238,6 @@
               <p class="item-title"><a href="#">러블리티박스</a></p>
               <div class="review-content">
                 <p class="review-text">아이 과외선생님 선물로 딱 좋아요
-                  <div class=""></div>
                 </p>
                 <div class="write-info">
                   <span class="id">jin*****</span>
@@ -374,7 +375,7 @@
           </div>
         </div>
         <div class="sale">
-          <h3 class="active sale-tab">
+          <h3 class=" sale-tab">
             <a role="button">판매순</a>
           </h3>
           <ol class="rank-container sale">
@@ -390,7 +391,7 @@
             <li>
               <div class="image-wrap">
                 <a href="#">
-                  <img src="./src/img/review/sale02.png" alt="">
+                  <img src="./src/img/review/sale02.png" alt=""></a>
               </div>
               <p class="item-title"><a href="#">녹차밀크스프레드 200 g</a></p>
               <p class="item-price">8,500원</p>
@@ -401,7 +402,7 @@
                   <img src="./src/img/review/sale03.png" alt="">
                 </a>
               </div>
-              <p class="item-title"><a href="#">그린티 롤케이크(화아트)</a></p>
+              <p class="item-title"><a href="#">그린티 롤케이크(화이트)</a></p>
               <p class="item-price">25,000원</p>
             </li>
             <li>
@@ -474,6 +475,7 @@
     </section>
 
     <section class="md-pick">
+      <h2 class="a11y-hidden">MD PICK</h2>
       <div class="md-pick-left">
         <a class="img-area" href="#">
           <p class="sub-title">올해 갓 채엽한 햇차의 매력</p>
@@ -581,8 +583,7 @@
               <p class="date">신청기간 05.11 ~ 05.24</p>
             </div>
             <div class="right">
-              <p class="price">15,000원</span>
-              </p>
+              <p class="price">15,000원</p>
               <p class="s-price">목표할인가 <span>12,000원</span></p>
             </div>
           </div>
@@ -770,82 +771,22 @@
       <h3>Follow Us <span>#OSULLOC</span></h3>
       <ul>
         <li>
-          <a href="#"><img src="./src/img/sns/sns01.jpg" alt="제주 유기농 차 밭의 진한 녹차와 
-                부드러운 크림이 만난 ‘오설록 그린티 슈페너’
-                ⠀
-                달콤한 크림의 부드러운 첫 맛과 달콤쌉싸래한 제주 녹차의 
-                완벽한 만남 😍 
-                아인슈페너를 모티브로 탄생한 ‘오설록 티슈페너’를 
-                오설록 매장에서 만나보세요💚
-                ⠀
-                #오설록 #osulloc #그린티슈페너 #오설록그린티슈페너 
-                #티슈페너 #아인슈페너 #티아인슈페너"></a>
+          <a href="#"><img src="./src/img/sns/sns01.jpg" alt="그린티 슈페너"></a>
         </li>
         <li>
-          <a href="#"><img src="./src/img/sns/sns02.jpg" alt="오설록 제주 차 밭을 키우는 
-                다섯 가지 자연의 선물 - 빛, 안개, 물, 바람, 흙
-                ⠀
-                화산섬이라는 특수한 자연 조건을 가진 제주의 빛, 안개, 물, 
-                바람, 흙은 생육이 까다로운 차나무를 키우고 찻잎을 틔우기에 탁월한 요소들이지만, 사람의 정성과 진심이 더해졌을 때에야 완벽한 하모니를 이루어냅니다.
-                ⠀
-                Nature's five gifts to Osulloc Jeju tea farm - sunlight, mist, water, breeze and soil.
-                ⠀
-                Volcanic Island, thanks to such a special natural setting, helps growing quality tea plants. However, 
-                it won't be complete until a sincere devotion come into play and create perfect harmony.
-                ⠀
-                #오설록 #osulloc #오설록차밭 #osullocteafarm #jeju #제주 #차밭 #teafarm"></a>
+          <a href="#"><img src="./src/img/sns/sns02.jpg" alt="오설록 제주 차 밭"></a>
         </li>
         <li>
-          <a href="#"><img src="./src/img/sns/sns03.jpg" alt="토림도예 개완과 함께
-                티 라이프 스타일을 완성해보세요🍵
-                ⠀
-                한옥 ‘처마’의 곡선에서 모티브를 얻어 제작한 토림도예의 
-                다기는 부드러운 곡선을 가지고 있습니다.
-                ⠀
-                Fulfill your tea life with Torim Ceramics🍵
-                The soft curvature of the ceramics was inspired by the eaves from traditional Korean house architecture.
-                ⠀
-                #오설록 #Osulloc #torimceramics #토림도예개완 #osulloclife #tealife"></a>
+          <a href="#"><img src="./src/img/sns/sns03.jpg" alt="토림도예 개완"></a>
         </li>
         <li>
-          <a href="#"><img src="./src/img/sns/sns04.jpg" alt="이맘때만 만날 수 있는 황금빛 찻잎, 🌱
-                #20년햇차 오설록에서 만나보세요
-                👉🏻제품보기 클릭!
-                ⠀
-                구매고객에게 골든티켓 증정하는 푸짐한 혜택까지!💚
-                프로필링크에서 자세한 이벤트 내용 확인해주세요:)
-                ⠀
-                #오설록 #osulloc #2020년햇차 #2020리미티드티 #GOLDENPICK #GOLDENTEA"></a>
+          <a href="#"><img src="./src/img/sns/sns04.jpg" alt="20년 햇차"></a>
         </li>
         <li>
-          <a href="#"><img src="./src/img/sns/sns05.jpg" alt="2020년 오설록 햇차 출시🌱
-                👉🏻인스타그램홈에서 이벤트 상세 내용 확인해주세요:)
-                ⠀
-                햇차 출시 기념! [GOLDEN PICK 리그램 #이벤트]
-                ⠀
-                댓글에 @친구에게 ‘햇차 출시’ 공유하고 본 게시물을 리그램해주시면 오설록 마스터즈티 라인중 ‘20년 햇차 우전’을 10분께 드립니다🎁
-                ⠀
-                ✔️참여방법
-                1.osulloc_official 인스타그램 팔로우
-                2.댓글에 친구 소환
-                3.본 게시물과 함께 4개 해시태그 포함한 리그램
-                #오설록 #2020년햇차 #goldenpick #오설록우전⠀
-                ⠀
-                ✔️기간: 20년 4월 29일(수) ~ 5월 17일(일)
-                ⠀
-                ✔️경품: 20년 햇차 우전 60g(잎차)&10잎(피라미드)
-                ⠀
-                *이벤트 종료 후 2주 이내 본 게시물 댓글에 발표 예정
-                *계정 공개는 필수
-                *오설록 인스타그램 페이지&본 게시물 좋아요는 센스!"></a>
+          <a href="#"><img src="./src/img/sns/sns05.jpg" alt="오설록 햇차 출시"></a>
         </li>
         <li>
-          <a href="#"><img src="./src/img/sns/sns06.jpg" alt="달콤한 카라멜 향미가 나는 루이보스티 
-                한잔과 함께 편안한 주말 시작하세요 :)
-                -
-                Start your weekend with a cup of rooibos tea has a sweet caramel flavor🍯
-                -
-                #오설록 #osulloc #osulloclife #루이보스티 #루이보스카라멜베리 #루이보스퓨어 #rooibostea #redtea"></a>
+          <a href="#"><img src="./src/img/sns/sns06.jpg" alt="루이보스티 한잔"></a>
         </li>
       </ul>
     </section>
@@ -874,7 +815,7 @@
         <div class="left">
           <div class="tel1">
             <p>고객상담센터 · 주문/배송문의</p>
-            <a href="#" tel>080-805-5555</a>
+            <a href="tel:080-805-5555">080-805-5555</a>
             <p>평일 09:30 - 17:00 (점심 11:30 - 13:00)</p>
           </div>
           <div class="tel2">
